--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,21 +1,24 @@
-<style type="text/css" media="screen">
+<head>
+  <style type="text/css" media="screen">
+    body {
+      margin: 0;
+    }
     .container {
-        margin: 10px auto;
-        max-width: 600px;
-        text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
     h1 {
-        margin: 30px 0;
-        font-size: 4em;
-        line-height: 1;
-        letter-spacing: -1px;
+      font-size: 4em;
+      font-weight: 300;
     }
-</style>
-
-<div class="container">
+  </style>
+</head>
+<body>
+  <div class="container">
     <h1>404</h1>
-
-    <p><strong>Page not found</strong></p>
-    <p>The requested page could not be found.</p>
-</div>
+  </div>
+</body>
