--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,1 +1,8 @@
-{{ content }}
+---
+layout: default
+---
+
+<article class="markdown">
+  <title>{{ page.title }}</title>
+  {{ content }}
+</article>
