--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,9 @@
-{{ content }}
+---
+layout: default
+---
+
+<article class="markdown">
+  <h1>{{ page.title}}</h1>
+  {% for tag in page.tags %} <a href="{{tag}}" class="tag"> {{tag}}</a> {%
+  endfor %} {{ content }}
+</article>
