--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
       <a href="/golang">Golang</a>
     </li>
     <li>
+      <a href="/kubernetes">kubernetes</a>
+    </li>
+    <li>
       <a href="/rust">Rust</a>
     </li>
     <li>
