--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <article class="markdown">
-  <title>{{ page.title }}</title>
+  <h1>{{ page.title}}</h1>
   {{ content }}
 </article>
