--- a/_sass/markdown.scss
+++ b/_sass/markdown.scss
@@ -15,10 +15,9 @@
     margin-top: 0;
     margin-bottom: 0;
     font-weight: 600;
-    border-bottom: 1px solid hsla(210, 18%, 87%, 1);
+    border-bottom: 1px solid var(--theme-border);
 
     &:hover {
-      text-decoration: underline;
       cursor: pointer;
     }
     &:hover::after {
@@ -47,7 +46,7 @@
 
   .tag {
     border-radius: 4px;
-    outline: 1px solid hsla(210, 18%, 60%, 1);
+    outline: 1px solid var(--theme-border);
     padding: 00 4px;
     margin: 2px;
     color: var(--theme-text);
@@ -55,6 +54,11 @@
 
   // blockquotes
   blockquote {
+    margin: 0;
+    padding: 0 1em;
+    color: #57606a;
+    border-left: 0.25em solid #d0d7de;
+
     > :first-child {
       margin-top: 0;
     }
@@ -66,6 +70,9 @@
   // code highlighting
   .highlight {
     margin-bottom: 16px;
+    pre {
+      margin-bottom: 0;
+    }
     .kd {
       color: #cf222e;
     }
@@ -84,8 +91,41 @@
     .x {
       color: #82071e;
     }
-    pre {
-      margin-bottom: 0;
+    .no {
+      color: #cf222e;
+    }
+    .nb {
+      color: #cf222e;
+    }
+    .sh {
+      color: #0a3069;
+    }
+    .nl {
+      color: #116329;
+    }
+    .nt {
+      color: #0550ae;
+    }
+    .err {
+      color: #f6f8fa;
+      background-color: #82071e;
+    }
+    .se {
+      color: #953800;
+    }
+    .si {
+      color: #cf222e;
+    }
+    // comment
+    .c {
+      color: var(--theme-text-secondary);
+    }
+    .n {
+      color: #72f088;
+    }
+    // number
+    .m {
+      color: #82071e;
     }
   }
 
@@ -98,16 +138,15 @@
     overflow-x: scroll;
     font-size: 85%;
     line-height: 1.45;
-    background-color: var(--theme-primary);
+    background-color: var(--theme-backgroud);
     border-radius: 6px;
     padding: 0.2em 0.4em;
   }
   pre {
-    background-color: var(--theme-backgroud-dark);
+    background-color: var(--theme-backgroud);
     border-radius: 6px;
     overflow: auto;
     padding: 16px;
-    padding-bottom: 8px;
     > code {
       background: transparent;
       padding: 0;
@@ -123,14 +162,14 @@
     height: 0.25em;
     margin: 24px 0;
     border: 0;
-    background-color: hsla(210, 18%, 87%, 1);
+    background-color: var(--theme-border);
   }
 
   // list
   // un order list
   ul {
     li {
-      list-style-type: lower-roman;
+      list-style-type: inherit;
     }
   }
   // order list
@@ -172,12 +211,12 @@
     }
     tbody {
       tr:nth-child(2n) {
-        background-color: var(--theme-primary);
+        background-color: var(--theme-backgroud);
       }
     }
     th,
     td {
-      border: 1px solid #d0d7de;
+      border: 1px solid var(--theme-border);
       padding: 6px 13px;
     }
   }
