--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% seo %}
+    {% seo %} {% include analytics.html %}
     <link
       rel="stylesheet"
       href="{{ '/assets/css/style.css' | relative_url }}"
