qadd some jekyll plugins
Signed-off-by: fatalc <cnfatal@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header role="banner">
   <div class="header-logo">
     <a href="/">
-      <img src="{{site.avatar}}" />
+      {% avatar {{ site.github.owner_name }} %}
       <div>{{ site.title }}</div>
     </a>
   </div>
