--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,6 @@
   <body>
     {% include header.html %}
     <main>{{ content }}</main>
-    {% include footer.html %}
+    {% include footer.html %} {% include js.html %}
   </body>
 </html>
