--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'zh-CN' }}">
-  <head>
-    <meta charset="utf-8" />
-    {% include go-get.html %}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% seo %} {% include analytics.html %}
-    <link
-      rel="stylesheet"
-      href="{{ '/assets/css/style.css' | relative_url }}"
-    />
-  </head>
+---
+layout: base
+---
 
-  <body>
-    {% include header.html %}
-    <main>{{ content }}</main>
-    {% include footer.html %} {% include js.html %}
-  </body>
-</html>
+{% include header.html %}
+<main>{{ content }}</main>
+{% include footer.html %} {% include js.html %}
